--- a/Desctop-7.html
+++ b/Desctop-7.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
     <title> Edvi </title>
   </head>
@@ -26,7 +27,7 @@
                 <li>We ___ from Uzbekistan</li>
               </ol>
             </div>
-            <div class="col-md-3 foyz-border">
+            <div class="col-md-3 p-5 foyz-border">
               <div class="protsent">
                 <p class="text-center nolfoyz">0%</p>
               </div>
@@ -37,7 +38,7 @@
                   <i class="far fa-star"></i>
                   <i class="far fa-star"></i>
                   <i class="far fa-star"></i>
-                </span><br><br>
+                </span><br>
                 <span>
                   <div class="row gy-5">
                     <div class="col ">
@@ -47,10 +48,9 @@
                       <a href="#" class="  btn btn-info sign-in-but col-12">Try again</a>
                     </div>
                   </div>
-                </span><br><br>
+                </span><br>
               </div>
             </div>
-
           </div>
       </div>
 
