--- a/cours overwiwe.html
+++ b/cours overwiwe.html
@@ -7,8 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title> course overwiw </title>
   </head>
   <body class="bg-light">
@@ -50,85 +51,281 @@
 
 <section class="container-fluid">
   <div class="container">
-    <div class="row">
+    <div class="row itms">
       <div class="col-9">
         <img src="images/teach.png" alt="">
-        <div class="h5">
-          You will learn:
         </div>
-        <div class="col">
-          <div class="starfont">
-            <i class=" text-muted fas fa-check"></i>  Speak pluently
-          </div>
-          <div class="starfont">
-            <i class="text-muted fas fa-check"></i>  Understand
-          </div>
-          <div class="starfont">
-            <i class="text-muted fas fa-check"></i>  English grammer
-          </div>
-          <div class="starfont">
-            <i class="text-muted fas fa-check"></i>  Read past
-          </div>
-        </div>
-        <div class="col">
-          <div class="starfont">
-            <i class=" text-muted fas fa-check"></i>  Speak pluently
-          </div>
-          <div class="starfont">
-            <i class="text-muted fas fa-check"></i>  Understand
-          </div>
-          <div class="starfont">
-            <i class="text-muted fas fa-check"></i>  English grammer
-          </div>
-          <div class="starfont">
-            <i class="text-muted fas fa-check"></i>  Read past
-          </div>
-        </div>
-      </div>
-      <div class="col-3 shadow1">
-        <div class="h3 text-center">
+      <div class="row col-3 shadow ">
+        <div class=" p-3 h3 text-center">
           Cours overviw:
         </div>
         <div class="starfont">
-          <i class="far fa-play-circle"></i>  20 Hours video
+          <i class="p-2 far fa-play-circle"></i>  20 Hours video
         </div>
         <div class="starfont">
-          <i class="fas fa-book"></i>  35 Ecercises
+          <i class="p-2 fas fa-book"></i>  35 Ecercises
         </div>
         <div class="starfont">
-          <i class="fas fa-book-open"></i>  14 Practice tasks
+          <i class="p-2 fas fa-book-open"></i>  14 Practice tasks
         </div>
         <div class="starfont">
-          <i class="fas fa-language"></i>  Language: English
+          <i class="p-2 fas fa-language"></i>  Language: English
         </div>
         <div class="starfont">
-          <i class="fas fa-signal"></i>  Level : Beginner
+          <i class="p-2 fas fa-signal"></i>  Level : Beginner
         </div>
         <div class="starfont">
-          <i class="fas fa-sync-alt"></i>  Unlimited Access
+          <i class="p-2 fas fa-sync-alt"></i>  Unlimited Access
         </div>
         <div class="starfont">
-          <i class="fas fa-award"></i>  Certificate of complition
+          <i class="p-2 fas fa-award"></i>  Certificate of complition
         </div>
-        <div class="col-md-auto text-center">
-          <a href="#" class="btn btn-info px-5 sign-in-button btn-primary ">Sotib olish</a>
+        <div class="text-center itms p-4">
+          <div class="col-md-auto text-center">
+            <a href="#" class="p-2 btn btn-info px-5 sign-in-button btn-primary">Sotib olish</a>
+          </div>
+          <div class="col-md-auto itms text-center">
+            <a href="#" class="p-2 btn btn-info px-5 sign-in-button">Sotib olish</a>
+          </div>
         </div>
-        <div class="col-md-auto text-center">
-          <a href="#" class="btn btn-info px-5 sign-in-button">Sotib olish</a>
-        </div>
+      </div>
+        <section class="container-fluid">
+          <div class="container">
+            <div class="row shadow1 itms">
+              <div class="col-9">
+                <div class="h5 border-top top-fut">
+                  You will learn:
+                </div>
+                <div class="row text-muted">
+                  <div class="col-6">
+                    <div class="starfont">
+                      <i class="p-2 text-muted fas fa-check"></i>  Speak pluently
+                    </div>
+                    <div class="starfont">
+                      <i class="p-2 text-muted fas fa-check"></i>  Understand
+                    </div>
+                    <div class="starfont">
+                      <i class="p-2 text-muted fas fa-check"></i>  English grammer
+                    </div>
+                    <div class="starfont">
+                      <i class="p-2 text-muted fas fa-check"></i>  Read past
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="starfont">
+                      <i class="p-2 text-muted fas fa-check"></i>  Speak pluently
+                    </div>
+                    <div class="starfont">
+                      <i class="p-2 text-muted fas fa-check"></i>  Understand
+                    </div>
+                    <div class="starfont">
+                      <i class="p-2 text-muted fas fa-check"></i>  English grammer
+                    </div>
+                    <div class="starfont">
+                      <i class="p-2 text-muted fas fa-check"></i>  Read past
+                    </div>
+                  </div>
+                </div>
+            </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
   </div>
 </section>
 <!-- Vertically centered modal -->
+<!--uchinchi sections-->
+<section class="container-fluid">
+  <div class="container">
+    <div class="row itms shadow1">
+      <div class="col-9">
+        <h4>Description</h4>
+        <div>
+          <p>Tish courses is for beginners learning English. Through the course you can learen</p>
+          <p>pronunciation, English grammar and speech.</p>
+          <p>All classes are online.</p>
+          <p>In doing so, you do the following:</p>
+         <br>
+          <p>-View video tutorials</p>
+          <p>-Exercise</p>
+          <p>-Homework</p>
+          <br>
+          <p>Each complated exercise will be evaluited, and at the and of each Unit you will be awarded </p>
+          <p>an asterisk based on the score</p>
+          <br>
+          <p>Ts in  possible to track your own progress</p>
+          <p>At the end of the course you will be awaeded a Certificate</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="container-fluid">
+  <div class="container">
+        <div class="row">
+          <div class="col-4">Course plan</div>
+          <div class="col-4">Total</div>56 lesson | 12 h 10 min
+
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree1">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <strong>Unit: 1.</strong> How to skype to etach  English online
+                </button>
+              </h2>
+              <div id="collapseThree12" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree123">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <strong>Unit: 2.</strong> How to skype to etach  English online
+                </button>
+              </h2>
+              <div id="collapseThree123" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree11">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <strong>Unit: 3.</strong> How to skype to etach  English online
+                </button>
+              </h2>
+              <div id="collapseThree11" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree112">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree112">
+                  <strong>Unit: 4.</strong> How to skype to etach  English online
+                </button>
+              </h2>
+              <div id="collapseThree112" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <strong>Unit: 5.</strong> How to skype to etach  English online
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                  <div class="starfont">
+                    <i class="far fa-play-circle"></i>
+                    <div class="col">Let's get acquainted with  nature </div>
+                    <div class="col">5:10 min</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col">
+                <img src="images/teacher2.jpg" class="img-thumbnail" alt="image_teacher">
+              </div>
+              <div class="col">
+                <h4>Diana Akhmedova</h4>
+                <p class="text-muted">English teacher</p>
+                <div class="p-1">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <div class="rep"></div>
+
+              </div>
+            </div>
+          </div>
+          </div>
+
+    </div>
+  </div>
+</div>
 
 
 
 
-
-
-
-<section class="container-fluid border-top top-fut">
+<section class="container-fluid">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-3">
@@ -137,7 +334,7 @@
         </div>
       </div>
       <div class="col justify-content-center">
-        <ul class="nav justify-content-center">
+        <ul class="nav justify-content-center med-futr">
       <li class="nav-item">
         <a class="nav-link disabled h6" href="#"> <u>Courses</u> </a>
       </li>
@@ -164,7 +361,7 @@
   <div class="container">
     <div class="row text-center margno h6">
       <div class="col-4">
-         &copy;Copiright2020
+         &copy; Copiright2020
       </div>
       <div class="col-4">
         All rights reserved
