--- a/offers — копия (2).html
+++ b/offers — копия (2).html
@@ -21,7 +21,7 @@
         <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="" width="60"> </a>
 
         <div class="col-1"></div>
-        <div class="col" data-bs-toggle="tooltip" data-bs-placement="bottom"
+        <div class="col text-truncate" data-bs-toggle="tooltip" data-bs-placement="bottom"
              title="English for Beginners - Learn English easily and perfectly">
             <h4>English for Beginners - Learn English easily and perfectly</h4>
         </div>
