--- a/prise.html
+++ b/prise.html
@@ -7,8 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title> Edvi </title>
   </head>
   <body class="bg-light">
@@ -38,8 +39,13 @@
           <a class="nav-link" href="#">About</a>
         </li>
       </ul>
-      <div class="col-md-auto">
-        <a href="#" class="btn btn-info sign-in-button">Sing in</a>
+      <div class="col-1"></div>
+      <div class="col-md-auto d-flex">
+        <div class="prog-pratsent row">
+          <div class="col align-self-center text-center">
+            <b>FK</b>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -104,7 +110,6 @@
           </div>
         </div>
       </div>
-
       <div class="col-lg-4 col-12">
         <div class="shadow">
           <div class="row p-3 coli_wiz">
@@ -272,7 +277,7 @@
         </div>
       </div>
       <div class="col justify-content-center">
-        <ul class="nav justify-content-center">
+        <ul class="nav justify-content-center med-futr">
       <li class="nav-item">
         <a class="nav-link disabled h6" href="#"> <u>Courses</u> </a>
       </li>
