--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
     <title> Edvi </title>
 </head>
 <body class="bg-light">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="custom-nav navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid gx-5">
         <div class="row nav-row">
             <div class="col-auto">
                 <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="" width="60"> </a>
             </div>
             <div class="col">
-                <div class="row" id="navbarSupportedContent">
-                    <div class="col-1"></div>
-                    <form class="col">
+                <div class="row justify-content-end" id="navbarSupportedContent">
+                    <div class="col-1 hidden-sm"></div>
+                    <form class="col align-items-center d-flex hidden-sm">
                         <div class="topsearch">
                             <i class="fas fa-search"></i>
                         </div>
                         <input class="form-control me-2 inp-bord" type="search" placeholder="" aria-label="Search">
                         <button class="visually-hidden" type="submit"></button>
                     </form>
-                    <div class="col-1"></div>
+                    <div class="col-1 hidden-sm"></div>
 
-                    <ul class="navbar-nav col-md-auto">
+                    <ul class="nav col-md-auto inline-nav">
 
                         <li class="nav-item btn btn-light">
                             <a class="nav-link active nav-link " aria-current="page" href="#scrollspyHeading1">Courses</a>
@@ -46,12 +46,20 @@
                         </li>
 
                     </ul>
-                    <div class="col-md-auto text-center">
+                    <div class="col-auto text-center align-items-center d-flex">
                         <a href="#" class=" btn btn-primary sign-in-button nav-item" data-bs-toggle="modal"
                            data-bs-target="#exampleModal">Sing in</a>
                     </div>
                 </div>
             </div>
+            <form class="col-12 align-items-center hidden-search hidden-lg">
+                <div class="topsearch">
+                    <i class="fas fa-search"></i>
+                </div>
+                <input class="form-control me-2 inp-bord" type="search" placeholder="" aria-label="Search">
+                <button class="visually-hidden" type="submit"></button>
+            </form>
+
         </div>
     </div>
 </nav>
