--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
 <!-- tugadi -->
 
 <!-- 2 ci modal can not -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modalwidth">
         <div class="modal-content modal-radius">
             <div class="modal-body modlabod">
@@ -731,7 +731,7 @@
                 <br>
                 <form>
                     <div class="text-center itms">
-                        <blockquote>
+                        <blockquote class="p-0">
                              Enter you email adress or phone <br>
                              number and we will send you a link to <br>
                              restore access to you account.
@@ -788,7 +788,45 @@
     </div>
 </div>
 <!-- tuggadi -->
+<!--1 ci modal sign in-->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modalwidth">
+        <div class="modal-content modal-radius">
+            <div class="modal-body modlabod">
+                <div class="h4 text-center">
+                    <p>Sign in</p>
+                </div>
+                <form>
+                    <div class="mb-4">
+                        <label for="exampleInputPassword" class="form-label">Login</label>
+                        <input type="text" class="form-control" id="exampleInputPassword">
+                    </div>
 
+                    <div class="mb-3">
+                        <label for="exampleInputPassword" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword">
+                    </div>
+                    <div class="p-3 text-center">
+                        <a href=" ?">Forgot password</a>
+                    </div>
+                    <div class="itms text-center noobe">
+                        <p>Don't have an accound?</p>
+                    </div>
+                    <div class="text-center">
+                        <a href="">Sign up</a>
+                    </div>
+
+
+                    <div class="d-grid gap-2 col-9 mx-auto but-width p-4">
+                        <button type="submit" class="btn btn-primary">Sign in</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!--tigadi-->
 <!-- 5 ci hes ban password -->
 <div class="modal fade" id="exampleModal123rwq" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modalwidth">
